--- a/servecar/src/main/resources/static/css/style.css
+++ b/servecar/src/main/resources/static/css/style.css
@@ -31,15 +31,17 @@ input {
     box-sizing: border-box;
 }
 
-button {
+/*button {
     width: 100%;
     padding: 10px;
     background-color: #007bff;
-    color: white;
+    color: black;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
+
+*/
 
 button:hover {
     background-color: #0056b3;
